<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LocationMapActivity">

    <fragment
        android:name="com.axel.foodie.view.fragment.LocationMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

                <ImageView
                    android:id="@+id/placeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/placeholder_filled_point"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/placeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins"
                    android:text="@string/nana_varachha"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toTopOf="@id/placeIcon"
                    app:layout_constraintBottom_toBottomOf="@id/placeIcon"
                    app:layout_constraintStart_toEndOf="@id/placeIcon"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/changePlaceBtn"
                    android:layout_width="105dp"
                    android:layout_height="31dp"
                    android:text="@string/change"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:textAllCaps="true"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="1dp"
                    android:insetBottom="0dp"
                    app:strokeColor="@color/red"
                    app:strokeWidth="1dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    app:layout_constraintTop_toTopOf="@id/placeIcon"
                    app:layout_constraintBottom_toBottomOf="@id/placeIcon"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yogi Chowk Ground, Chikuwadi \n Nana Varachha,Surat, Gujarat, India"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/grey_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/changePlaceBtn"
                app:layout_constraintBottom_toTopOf="@id/setDeliveryLocationBtn"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/setDeliveryLocationBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="1dp"
                android:insetBottom="0dp"
                android:text="@string/confirm_location"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>